New_Website/stylesheet.css
* {
  margin: 0;
  padding: 0;
}
.clickable {
  cursor: pointer;
  cursor: hand;
}
a {
  color: #000;
  text-decoration: underline;
}
a:hover {
  color: #000;
  text-decoration: none;
}
body {
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: 300;
  display: none;
  text-rendering: optimizeLegibility;
  font-smooth: always;
  font-smoothing: antialiased;
  -moz-font-smoothing: antialiased;
  -webkit-font-smoothing: antialiased;
  -webkit-font-smoothing: subpixel-antialiased;
}
#header {
  border-bottom: solid 1px #f0f0f0;
  position: fixed;
  width: 100%;
  top:0;
  background-color: #fff;
  z-index:3;
  height: 90px;
}
#logo {
  display: inline-block;
  margin: 15px;
  width: 87px;
  height: 61px;
  background-color: #000;
  position: fixed;
  transition:         all 0.2s ease;
  -webkit-transition: all 0.2s ease;
  -moz-transition:    all 0.2s ease;
  -ms-transition:     all 0.2s ease;
  -o-transition:      all 0.2s ease;
  -webkit-box-shadow:inset 0px 0px 0px 1px #fff;
  -moz-box-shadow:inset 0px 0px 0px 1px #fff;
  box-shadow:inset 0px 0px 0px 1px #fff;
}
#logo img {
  transition:         all 0.2s ease;
  -webkit-transition: all 0.2s ease;
  -moz-transition:    all 0.2s ease;
  -ms-transition:     all 0.2s ease;
  -o-transition:      all 0.2s ease;
  width: 88px;
  height: 62px;
}
#content {

  padding: 120px 30px 20px;
}
#description p{
  color: #000;
  font-size: 24px;
  line-height: 36px;
  margin: 0 0 20px 0;
}
#description p.home_description {
  color: #777;
}
#description p.small {
  font-size: 18px;
  line-height: 26px;
  color: #777;
}
#description {
  margin-bottom: 50px;
}
.work_description {
  line-height: 26px;
}
.logo_header {
  width: 110px;
}
.work_tags {
  font-size: 14px;
  margin: 0;
}
#description a{
  text-decoration: none;
  color: #000;
  text-shadow: 0 0 0 #000;
}
#description a:hover{
  color: #000;
}
#description p.small a{
  text-decoration: underline;
  text-shadow: none;
}
#description p.small a:hover{
  text-decoration: none;
}
#nav_icon_on {
  float: right;
  width: 54px;
  height: 54px;
  margin: 15px 20px 0 0;
  background-color: #000;
  -webkit-box-shadow:inset 0px 0px 0px 4px #fff;
  -moz-box-shadow:inset 0px 0px 0px 4px #fff;
  box-shadow:inset 0px 0px 0px 4px #fff;
}
#nav_icon_on img{
  width: 55px;
  height: 55px;
}
#nav_icon_off {
  float: right;
  width: 54px;
  height: 54px;
  margin: 15px 20px 0 0;
  background-color: #000;
  -webkit-box-shadow:inset 0px 0px 0px 4px #fff;
  -moz-box-shadow:inset 0px 0px 0px 4px #fff;
  box-shadow:inset 0px 0px 0px 4px #fff;
}
#nav_icon_off img{
  width: 55px;
  height: 55px;
}
#mobile_nav {
  display: none;
  height: 100%;
  width: 100%;
  position: fixed;
  top: 0;
  background-color: #FFF;
}
#regular_nav {
  display:none;
  text-decoration: none;
}
#mobile_nav ul {
  padding: 30px 75px 25px 30px;
  list-style: none;
}
#mobile_nav a{
  text-decoration: none;
  font-size: 22px;
  display: block;
  margin: 0 0 20px 0;
}
.work_image {
  width: 100%;
}
.work {
  margin: 40px 0 75px 0;
}
.image_sets {
  margin: 50px 0 0px 0;
}
p.work_title {
  font-size: 18px;
  margin: 10px 0 0 0;
}
p.work_description {
  margin: 0 0 10px 0;
  font-size: 16px;
  color: #777;
}
a.button {
  display: inline-block;
  text-shadow: 0 0 0 #000;
  border: solid 1px #000;
  border-radius: 20px;
  font-size: 14px;
  padding: 15px 20px;
  line-height: 0;
  text-decoration: none;
}
a.button:hover {
  border-color: #000;
}
footer {
  text-align: center;
  color: #777;
  padding: 75px 0;
  background-color: #f9f9f9;
}
p#footer_header {
  font-size: 22px;
  margin: 0 0 15px 0;
  color: #000;
}
p#footer_description {
  font-size: 20px;
  margin: 0 0 5px 0;
}
p#footer_number {
  font-size: 30px;
  margin: 0 0 10px 0;
  color: #000;
}
p#footer_email a {
  font-size: 16px;
  color: #777;
  display: inline-block;
  margin: 0 0 40px 0;
  color: #000;
  text-decoration: none;
}
p#footer_email a:hover {
  text-decoration: underline;
}
img#instagram, img#twitter {
  width: 55px;
  display: inline;
  margin-right: 5px;
}
img:hover#instagram,img:hover#twitter {
  opacity: .8;
}
img#tiny_logo{
  width: 150px;
  display: block;
  margin: 20px auto 5px;
}
p#copywrite {
  color: #777;
  font-size: 12px;
}
.portrait {
  margin-bottom: 30px;
}
/* Tablet Styles */
@media all and (min-width: 768px){
  #logo {
    margin: 25px 0 15px 25px;
    top:0;
    position: fixed;
    z-index:2;
  }
  .image_sets {
    margin: 50px 0 50px 0;
  }
  .work {
    margin: 75px 0 100px 0;
  }
  #header {
    background-color: transparent;
    border:none;
    position:static;
    height: 50px;
  }
  #regular_nav {
    font-size: 18px;
    display: block;
  }
  #regular_nav {
    margin: 35px 0 0px 140px;
    display: block;
  }
  #regular_nav a {
    display: inline;
    padding: 0 20px 0 0;
  }
  #regular_nav li {
    display: inline;
  }
  #nav_icon_on {
    display: none;
  }
  .active_page {
    text-decoration:underline;
  }
  #content {
    max-width: 725px;
    margin: 0px 25px 20px 140px;
    padding: 0px 0px 20px;
  }
  footer {
    text-align: left;
    padding: 50px 0 50px 140px;

  }
  img#tiny_logo {
    margin: 20px 0 5px;
  }
}
/* Desktop Styles */
@media all and (min-width: 1418px){
  #regular_nav {
    position: fixed;
    margin: 39px 10px 0 0;
    right: 0;
    padding: 0;
  }
  #regular_nav a{
    text-decoration: none;
  }
  #regular_nav a:hover{
    text-decoration: underline;
  }
  #header {
    height: 0;
  }
  #content {
    padding: 35px 0px 20px;
  }
}

